# Ultrasound-Speckle-Suppression-with-Structure-Preservation-and-Auto-Tuning

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json  grid_small.json
docs/: DESIGN.md  EXPERIMENT_LOG.md  RESULTS_TEMPLATE.md
research_notes/: ablation.md
scripts/: make_report.py  run_eval.py  run_grid_search.py
src/ultraenhance/: __init__.py  cli.py  enhance.py  io_utils.py  metrics.py  optimize.py
tests/: test_smoke.py
